2007-01-17  Akim Demaille  <akim@lrde.epita.fr>

	First column is column 1.
	This code can be simplified when Bison 2.4 is out.
	* src/parser/uparser.cc (process): Enforce this.
	* src/parser/bison/utoken.l (LINES): New.
	Use it.

2007-01-17  Matthieu Nottale  <nottale@gostai.com>

	Fix a bug when printing strings containing % in the ghostconnection and a potential send bug in userver
	* src/ughostconnection.cc: Do not pass string to print in the format field. pass ("%s", str) instead.
	* src/userver.cc: Add missing call to va_end.
	* src/userver.hh: Rename overloaded send(va_args) to vsend as the wrong one might be called.

2007-01-16  Akim Demaille  <akim@lrde.epita.fr>

	Add missing ;.
	* src/parser/bison/ugrammar.y: here.
	Newer Bisons no longer add this default semicolon.

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	The bug was an uninitialized attribute of UParser in the constructor.

	fix ticket #113 
	* src/parser/uparser.cc: add init of commandTree to 0.
	* src/uconnection.cc: remove Tsuna temporary fix.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals 

2007-01-14  Akim Demaille  <akim.demaille@free.fr>

	Catch up with UValue::Type.
	* src/uobject.cc, src/uvalue.cc, src/uvar.cc: Prepend UValue::
	where needed.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	Kernel side of the API Change made to UObject had to be fixed.

	revert UObject API change. 
	* src/uvalue.cc: done.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	update uobject externals to r363

2007-01-12  Akim Demaille  <akim@lrde.epita.fr>

	Update uobject
	To get Matthieu's fix on scanf use.

2007-01-12  Akim Demaille  <akim.demaille@free.fr>

	cpp fix
	* src/ucommand.cc: Fix an #undef.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	-Werror
	* configure.ac: Pass it.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Shorten scopes, fix warnings
	* src/uvalue.cc (UValue::copy): Make it clear which missing