@@ -1,5 +1,10 @@
 2007-01-17  Akim Demaille  <akim@lrde.epita.fr>
 
+	More location initialization.
+	* src/parser/uparser.cc (UParser::UParser): here.
+
+2007-01-17  Akim Demaille  <akim@lrde.epita.fr>
+
 	First column is column 1.
 	This code can be simplified when Bison 2.4 is out.
 	* src/parser/uparser.cc (process): Enforce this.
